<resources>
    <string name="app_name">Ladecentro</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- fragment_login -->
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Sign in</string>
    <string name="welcome">Welcome back!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_with">sign in with</string>
    <string name="have_an_account">Do not have an account yet? </string>
    <string name="signup">Sign up</string>

    <!-- fragment_signup -->
    <string name="full_name">name</string>
    <string name="sign_up_with">sign up with</string>
    <string name="already_account">Already have an account?</string>
    <string name="read_the_terms">I have read the terms and condition</string>
    <string name="get_started">Get started!</string>

    <!-- home_menu -->
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="designer">Designer</string>
    <string name="profile">Profile</string>
    <string name="shop">Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Profile Fragment -->
    <string name="account_details">Account Details</string>
    <string name="addresses">Addresses</string>
    <string name="your_orders">Your orders</string>
    <string name="downloads">Downloads</string>
    <string name="payment">Payments</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>


    <!-- Add Address Activity -->
    <string name="add_address">Add Address</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="phone_no">Phone no.</string>
    <string name="name">Name</string>
    <string name="use_your_location">Use your location</string>


</resources>