<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ladecentro.authentication.AuthActivity">

    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/icons8_home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/shop_fragment"
        android:icon="@drawable/icons8_home"
        android:orderInCategory="100"
        android:title="@string/shop"
        app:showAsAction="never" />

    <item
        android:id="@+id/create_fragment"
        android:icon="@drawable/icons8_idea"
        android:orderInCategory="100"
        android:title="@string/create"
        app:showAsAction="never" />

    <item
        android:id="@+id/profile_fragment"
        android:icon="@drawable/baseline_person_outline_24"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="never" />
</menu>