<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ladecentro.view_model.LoginViewModel" />

    </data>

    <!--    <androidx.core.widget.NestedScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        tools:context=".authentication.LoginFragment">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/fredoka_one"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="32sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/primary"
                app:boxStrokeWidth="2dp"
                app:errorEnabled="@{viewModel.errorEmail}"
                app:hintTextColor="@color/primary"
                app:startIconDrawable="@drawable/baseline_alternate_email_24"
                app:startIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hind_madurai"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress"
                    android:text="@={viewModel.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/primary"
                app:boxStrokeWidth="2dp"
                app:errorEnabled="@{viewModel.errorPassword}"
                app:hintTextColor="@color/primary"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/primary"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hind_madurai"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/andika"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textColor="@color/primary"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/primary"
                android:enabled="@{!viewModel.loading}"
                android:fontFamily="@font/fredoka_one"
                android:onClick="@{() -> viewModel.login()}"
                android:text="@string/login"
                android:textAllCaps="false"
                app:cornerRadius="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/andika"
                android:text="@string/sign_in_with"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="16dp"
                android:background="#B8B8B8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="48dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icons8_facebook"
                    app:tint="@color/primary" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icons8_google"
                    app:tint="@color/primary" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icons8_linkedin_circled"
                    app:tint="@color/primary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:text="@string/have_an_account"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sign_in_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/andika"
                    android:text="@string/signup"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    </androidx.core.widget.NestedScrollView>-->

</layout>