<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ladecentro.view_model.ProfileDetailsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="26dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/andika"
                    android:text="@string/account_details"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            tools:context=".ui.profile.ProfileDetailsActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="24dp">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:backgroundTint="@color/white"
                            app:cardCornerRadius="64dp"
                            app:cardElevation="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/profile_image"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:contentDescription="@string/app_name"
                                android:loadImage="@{viewModel.image}"
                                android:scaleType="centerCrop"
                                android:src="@drawable/user_profile" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="24dp"
                            app:cardElevation="2dp"
                            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
                            app:layout_constraintEnd_toEndOf="@+id/cardView2">

                            <ImageView
                                android:id="@+id/select_image"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@color/primary"
                                android:contentDescription="@string/app_name"
                                android:padding="10dp"
                                android:src="@drawable/icon_camera"
                                app:tint="@color/white" />
                        </androidx.cardview.widget.CardView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/full_name"
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxCornerRadiusBottomEnd="8dp"
                            app:boxCornerRadiusBottomStart="8dp"
                            app:boxCornerRadiusTopEnd="8dp"
                            app:boxCornerRadiusTopStart="8dp"
                            app:boxStrokeColor="@color/primary"
                            app:endIconDrawable="@drawable/account_colour"
                            app:errorEnabled="@{viewModel.errorEnable}"
                            app:hintTextColor="@color/primary"
                            app:startIconTint="@color/primary">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/hind_madurai"
                                android:hint="@string/name"
                                android:inputType="textPersonName"
                                android:maxLength="50"
                                android:text="@={viewModel.name}" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/update_profile"
                            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                            android:layout_width="match_parent"
                            android:layout_height="54dp"
                            android:layout_marginTop="16dp"
                            android:backgroundTint="@color/primary"
                            android:fontFamily="@font/hind_madurai"
                            android:text="Update"
                            android:textAllCaps="false"
                            app:cornerRadius="12dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>